--- a/src/app/pages/inserisci-schema/inserisci-schema.component.html
+++ b/src/app/pages/inserisci-schema/inserisci-schema.component.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="mb-3">
-      <label for="calorie" class="form-label fw-semibold">Calorie:</label>
+      <label for="calorie" class="form-label fw-semibold">kcal:</label>
       <input id="calorie" type="number" class="form-control" [(ngModel)]="calorie" name="calorie" min="0" step="0.01"
         required />
     </div>
