--- a/src/app/pages/riepilogo-schemi/riepilogo-schemi.component.html
+++ b/src/app/pages/riepilogo-schemi/riepilogo-schemi.component.html
@@ -27,7 +27,7 @@
         <h5 class="card-title text-primary mb-3">{{ schema.nome }}</h5>
         <ul class="list-group list-group-flush mb-3">
           <li class="list-group-item d-flex justify-content-between">
-            <span>Calorie:</span><span>{{ schema.calorie | number:'1.0-2' }}</span>
+            <span>kcal:</span><span>{{ schema.calorie | number:'1.0-2' }}</span>
           </li>
           <li class="list-group-item d-flex justify-content-between">
             <span>Carboidrati (g):</span><span>{{ schema.carboidrati | number:'1.0-2' }}</span>
@@ -60,7 +60,7 @@
       <thead class="table-light">
         <tr>
           <th>Nome Schema</th>
-          <th>Calorie</th>
+          <th>kCal</th>
           <th>Carboidrati (g)</th>
           <th>Grassi (g)</th>
           <th>Proteine (g)</th>
